---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/for/closure_in_body.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (var f1 (global @1) ∅)
   (var f2 (global @2) ∅)
   (var f3 (global @3) ∅)
   (for
      (var i (cell @0) 1.0)
      (< (cell i @0) 4.0)
      (= (cell i @0) (+ (cell i @0) 1.0))
      (block
         (var j (cell @1) (cell i @0))
         (fun f (local @6) [] [Some(0), Some(1)]
            (block
               (print (cell i @0))
               (print (cell j @1))))
         (if
            (== (cell j @1) 1.0)
            (expr (= (global f1 @1) (local f @6)))
            (if
               (== (cell j @1) 2.0)
               (expr (= (global f2 @2) (local f @6)))
               (expr (= (global f3 @3) (local f @6)))))))
   (expr (call +4 (global f1 @1)))
   (expr (call +4 (global f2 @2)))
   (expr (call +4 (global f3 @3))))

----- stderr -----
